k8s/lab1/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-service
spec:
  selector:
    app: Zerosploit
  ports:
  - protocol: TCP
    port: 80        
    targetPort: 80
  type: ClusterIP
