k8s/lab1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
spec:
  ingressClassName: nginx  
  rules:
  - host: k8s.alyesmaeil.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-service
            port:
              number: 80
